--- a/website_01.html
+++ b/website_01.html
@@ -10,6 +10,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
   <body class="works_website01">
+    <!-- カーソルの見た目を変更 -->
+    <div id="cursor"></div>
+    <div id="stalker"></div>
     <header>
       <!-- 共通：PCナビゲーション -->
       <nav class="pc_nav">
@@ -58,10 +61,12 @@
         </ul>
       </nav>
 
-      <!-- 共通：SP固定メールあいこん -->
-      <div class="mail_icon">
-        <img src="./images/1x/SP_mail_icon.svg" alt="メールのアイコン" />
-      </div>
+      <!-- SP固定メールあいこん -->
+      <a href="index.html#c-form"
+        ><div class="mail_icon">
+          <img src="./images/1x/SP_mail_icon.svg" alt="メールのアイコン" />
+        </div>
+      </a>
     </header>
 
     <!-- 共通：FVスクロールバー -->
@@ -154,6 +159,47 @@
 
     <!-- 共通：jquery -->
     <script>
+      //カーソルの見た目を変更
+      var cursor = $("#cursor");
+      //ちょっと遅れてついてくるストーカー要素の指定
+      var stalker = $("#stalker");
+
+      //mousemoveイベントでカーソル要素を移動させる
+      $(document).on("mousemove", function (e) {
+        //カーソルの座標位置を取得
+        var x = e.clientX;
+        var y = e.clientY;
+        //カーソル要素のcssを書き換える用
+        cursor.css({
+          opacity: "1",
+          top: y + "px",
+          left: x + "px",
+        });
+
+        //ストーカー要素のcssを書き換える用
+        setTimeout(function () {
+          stalker.css({
+            opacity: "0.4",
+            top: y + "px",
+            left: x + "px",
+          });
+        }, 140); //カーソルより遅れる時間を指定
+      });
+
+      //aタグホバー
+      $("a").on({
+        mouseenter: function () {
+          //activeクラス付与
+          cursor.addClass("active");
+          stalker.addClass("active");
+        },
+        mouseleave: function () {
+          cursor.removeClass("active");
+          stalker.removeClass("active");
+        },
+      });
+
+      //バーガーメニュー
       $(function () {
         $(".works_banner_sp_btn").on("click", function () {
           // メニュー閉じたり開いたり
