ポートフォリオ_iwasawa11

--- a/index.html
+++ b/index.html
@@ -126,98 +126,101 @@
 
     <main>
       <!-- Works -->
+
       <section class="works_section" id="works_all">
-        <h2 class="works_header"><span>Works</span></h2>
-        <!-- ポートフォリオ -->
-        <article>
-          <div>
-            <div class="works_content01">
-              <p class="works_category">#Website</p>
-              <h3 class="works_title">ポートフォリオ</h3>
-              <p class="works_discription">
-                コンセプト設定から実装まで、いまの自分にできる全てをこのポートフォリオに詰め込みました。“お客さまに長く愛されるデザインを届けたい”<br />“人と人のつながりを大切にし、長く寄り添える存在でありたい”<br />そんな想いから「∞（インフィニティ）」と「輪（つながり）」をコンセプトにしています。
-              </p>
-              <p class="works_sub_category">[ Category : design, coding ]</p>
-              <a class="works_btn" href="website_01.html">View more</a>
-            </div>
-
+        <div class="top_works_wrapper">
+          <h2 class="works_header"><span>Works</span></h2>
+          <!-- ポートフォリオ -->
+          <article>
             <div>
-              <img
-                class="works_item"
-                src="./images/1x/works_01_pc.png"
-                alt="ポートフォリオのモックアップ"
-              />
-            </div>
-          </div>
-        </article>
+              <div class="works_content01">
+                <p class="works_category">#Website</p>
+                <h3 class="works_title">ポートフォリオ</h3>
+                <p class="works_discription">
+                  コンセプト設定から実装まで、いまの自分にできる全てをこのポートフォリオに詰め込みました。“お客さまに長く愛されるデザインを届けたい”<br />“人と人のつながりを大切にし、長く寄り添える存在でありたい”<br />そんな想いから「∞（インフィニティ）」と「輪（つながり）」をコンセプトにしています。
+                </p>
+                <p class="works_sub_category">[ Category : design, coding ]</p>
+                <a class="works_btn" href="website_01.html">View more</a>
+              </div>
 
-        <!-- ヘアサイト -->
-        <article>
-          <div>
+              <div>
+                <img
+                  class="works_item"
+                  src="./images/1x/works_01_pc.png"
+                  alt="ポートフォリオのモックアップ"
+                />
+              </div>
+            </div>
+          </article>
+
+          <!-- ヘアサイト -->
+          <article>
             <div>
-              <img
-                class="works_item"
-                src="./images/1x/works_02_pc.png"
-                alt="ヘアサロンサイトのモックアップ"
-              />
-            </div>
+              <div>
+                <img
+                  class="works_item"
+                  src="./images/1x/works_02_pc.png"
+                  alt="ヘアサロンサイトのモックアップ"
+                />
+              </div>
 
-            <div class="works_content">
-              <p class="works_category02">#Website</p>
-              <h3 class="works_title02">Re LIFE様</h3>
-              <p class="works_discription02">
-                仮想のヘアサロンサイトをデザインしました。コーポレートカラーのピンクを基調に、お店の雰囲気や人が感じられるサイトに仕上げました。
-              </p>
-              <p class="works_sub_category02">[ Category : design ]</p>
-              <a class="works_btn02" href="works_hairsalon.html">View more</a>
+              <div class="works_content">
+                <p class="works_category02">#Website</p>
+                <h3 class="works_title02">Re LIFE様</h3>
+                <p class="works_discription02">
+                  仮想のヘアサロンサイトをデザインしました。コーポレートカラーのピンクを基調に、お店の雰囲気や人が感じられるサイトに仕上げました。
+                </p>
+                <p class="works_sub_category02">[ Category : design ]</p>
+                <a class="works_btn02" href="works_hairsalon.html">View more</a>
+              </div>
             </div>
-          </div>
-        </article>
+          </article>
 
-        <!-- カフェサイト -->
-        <article>
-          <div>
-            <div class="works_content02">
-              <p class="works_category">#Website</p>
-              <h3 class="works_title">DESIGN CAFE様</h3>
-              <p class="works_discription">
-                仮想のカフェサイトを制作しました。レスポンシブ対応で、スマートフォンからPCまで快適に閲覧できるよう設計しています。また、jQueryを活用し、スクロールやボタン操作にアニメーションを取り入れることで、サイト全体にやさしい動きを加え心地よく閲覧できる工夫をこらしました。
-              </p>
-              <p class="works_sub_category03">[ Category : coding ]</p>
-              <a class="works_btn" href="works_cafesite.html">View more</a>
+          <!-- カフェサイト -->
+          <article>
+            <div>
+              <div class="works_content02">
+                <p class="works_category">#Website</p>
+                <h3 class="works_title">DESIGN CAFE様</h3>
+                <p class="works_discription">
+                  仮想のカフェサイトを制作しました。レスポンシブ対応で、スマートフォンからPCまで快適に閲覧できるよう設計しています。また、jQueryを活用し、スクロールやボタン操作にアニメーションを取り入れることで、サイト全体にやさしい動きを加え心地よく閲覧できる工夫をこらしました。
+                </p>
+                <p class="works_sub_category03">[ Category : coding ]</p>
+                <a class="works_btn" href="works_cafesite.html">View more</a>
+              </div>
+
+              <div class="order">
+                <img
+                  class="works_item"
+                  src="./images/1x/works_03_pc.png"
+                  alt="ポートフォリオのモックアップ"
+                />
+              </div>
             </div>
+          </article>
 
-            <div class="order">
-              <img
-                class="works_item"
-                src="./images/1x/works_03_pc.png"
-                alt="ポートフォリオのモックアップ"
-              />
-            </div>
-          </div>
-        </article>
-
-        <!-- WORKS Viewallボタン -->
-        <!-- <div class="view_all_wrapper">
+          <!-- WORKS Viewallボタン -->
+          <!-- <div class="view_all_wrapper">
           <img src="./images/1x/ViewAllボタン.svg" alt="ボタンの画像" /><a
             href="works_all.html"
             ><p>View all Works</p></a
           >
         </div> -->
-        <div class="view_all_wrapper">
-          <a href="works_all.html">
-            <img src="./images/1x/ViewAllボタン.svg" alt="ボタンの画像" />
-            <p>View all Works</p>
-          </a>
-        </div>
+          <div class="view_all_wrapper">
+            <a href="works_all.html">
+              <img src="./images/1x/ViewAllボタン.svg" alt="ボタンの画像" />
+              <p>View all Works</p>
+            </a>
+          </div>
 
-        <!-- あしらい２ -->
-        <div class="roop_wrapper02">
-          <img
-            class="roop_design02"
-            src="./images/1x/roop_design02.svg"
-            alt="∞マークの装飾"
-          />
+          <!-- あしらい２ -->
+          <div class="roop_wrapper02">
+            <img
+              class="roop_design02"
+              src="./images/1x/roop_design02.svg"
+              alt="∞マークの装飾"
+            />
+          </div>
         </div>
       </section>
 
