ポートフォリオ_iwasawa11

--- a/about_me.html
+++ b/about_me.html
@@ -117,6 +117,7 @@
       </section>
 
       <section class="service_section">
+         
         <div>
           <h2 class="service_header"><span>Service</span></h2>
           <div class="service_flex">
@@ -340,6 +341,14 @@
 
     <!-- <フッター> -->
     <footer class="about_footer">
+        <!-- あしらい09-->
+      <div class="roop_wrapper09">
+        <img
+          class="roop_design09"
+          src="./images/1x/roop_design10.svg"
+          alt="∞マークの装飾"
+        />
+      </div>
       <!-- あしらい10-->
       <div class="roop_wrapper10">
         <img
