--- a/website_01.html
+++ b/website_01.html
@@ -75,6 +75,14 @@
     </div>
     <!-- WORKS WEBSITE01 紹介ページ内容 -->
     <main class="site_main">
+      <!-- あしらい8-->
+      <div class="roop_wrapper08">
+        <img
+          class="roop_design08"
+          src="./images/1x/roop_design08.svg"
+          alt="∞マークの装飾"
+        />
+      </div>
       <section class="site_wrapper01">
         <p>#Website</p>
         <h3>ポートフォリオ</h3>
