ポオートフォリオ_iwasawa12

--- a/about_me.html
+++ b/about_me.html
@@ -329,7 +329,7 @@
             <div class="c-form_submit">
               <button type="submit">
                 <img src="./images/1x/送信ボタン.svg" alt="ボタンの画像" />
-                <p>内容を送信する</p>
+                <p><span class="c-form_span">内容を送信する</span></p>
               </button>
             </div>
           </form>
