--- a/website_01.html
+++ b/website_01.html
@@ -112,9 +112,9 @@
         </div>
         <!-- ボタン -->
         <div class="site_launch_btn">
-          <a href="works_all.html">
+          <a href="index.html">
             <img src="./images/1x/works_site_btn.svg" alt="ボタンの画像" />
-            <p>Launch Website</p>
+            <p><span class="site_btn_span">Launch Website</span></p>
           </a>
         </div>
 
